<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="User"
            type="com.time.timing.EmployeesModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.EmployeesHome.PersonalInfo">


        <TextView
            android:id="@+id/ProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/sssistant_regular"
            android:text="@string/my_profile"
            android:textColor="#333333"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/UserIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_user"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ProfileText"
            app:layout_constraintWidth_percent=".2"
            app:tint="@color/carbon_black_54" />


        <EditText
            android:id="@+id/Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/sssistant_regular"
            android:gravity="center"
            android:hint="@string/name"
            android:text="@{User.name}"
            android:padding="@dimen/_13sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UserIcon"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/sssistant_regular"
            android:gravity="center"
            android:hint="@string/number"
            android:text="@{User.phone}"
            android:padding="@dimen/_13sdp"
            android:singleLine="true"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name"
            app:layout_constraintWidth_percent=".8" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/sssistant_regular"
            android:gravity="center"
            android:text="@string/no_details_can_be_edited_at_this_time"
            app:layout_constraintBottom_toTopOf="@+id/ConfirmButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".9" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ConfirmButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:.18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            app:shapeAppearanceOverlay="@style/shape_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistant_semibold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ConfirmButton"
            app:layout_constraintEnd_toEndOf="@+id/ConfirmButton"
            app:layout_constraintStart_toStartOf="@+id/ConfirmButton"
            app:layout_constraintTop_toTopOf="@+id/ConfirmButton"
            app:layout_constraintWidth_percent=".7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>