<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Employees.SignInForEmployee">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/EmployeeBackGround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/_20sdp"
            android:src="@drawable/applogo"
            app:layout_constraintBottom_toTopOf="@+id/LoginEmployee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <TextView
            android:id="@+id/LoginEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/assistant_semibold"
            android:text="@string/sign_in_for_employees"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#F9F9F9"
            android:padding="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view">


            <ImageView
                android:id="@+id/Icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_israel"
                app:layout_constraintBottom_toBottomOf="@+id/CountryCode"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CountryCode" />

            <TextView
                android:id="@+id/CountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/assistant_semibold"
                android:text="+880"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="@+id/Icon"
                app:layout_constraintStart_toEndOf="@+id/Icon" />

            <EditText
                android:id="@+id/InputNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/uploadprofilepicbutton_bg"
                android:fontFamily="@font/sssistant_regular"
                android:gravity="center"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/CountryCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CountryCode"
                app:layout_constraintTop_toTopOf="@+id/CountryCode" />

            <CheckBox
                android:id="@+id/LoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="@+id/Icon"
                app:layout_constraintTop_toBottomOf="@+id/InputNumber" />

            <TextView
                android:id="@+id/TCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sssistant_regular"
                android:text="@string/terms_condition"
                app:layout_constraintBottom_toBottomOf="@+id/LoginCheckBox"
                app:layout_constraintEnd_toEndOf="@+id/InputNumber"
                app:layout_constraintStart_toEndOf="@+id/LoginCheckBox"
                app:layout_constraintTop_toTopOf="@+id/LoginCheckBox" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Continue"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/invisiable_buttonbg"
                app:layout_constraintBottom_toTopOf="@+id/Skip"
                app:layout_constraintHeight_percent=".13"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:shapeAppearanceOverlay="@style/shape_button" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_semibold"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/send_me_a_verification_code"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/Continue"
                app:layout_constraintEnd_toEndOf="@+id/Continue"
                app:layout_constraintStart_toStartOf="@+id/Continue"
                app:layout_constraintTop_toTopOf="@+id/Continue"
                app:layout_constraintWidth_percent=".8" />


            <TextView
                android:id="@+id/Skip"
                android:layout_width="22dp"
                android:layout_height="18dp"
                android:fontFamily="@font/assistant_semibold"
                android:text="@string/skip"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>