<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ManagerSignIn.ManagerOTP">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/ManagerBackGround"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/assistant_semibold"
        android:text="חכמים בזמן  - Timing"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/_20sdp"
        android:src="@drawable/applogo"
        app:layout_constraintBottom_toTopOf="@+id/LoginEmployee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/LoginEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/assistant_semibold"
        android:text="@string/sign_in_for_manager"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/VCodeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/sssistant_regular"
            android:gravity="center"
            android:text="@string/verification_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8" />

        <TextView
            android:id="@+id/Details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:fontFamily="@font/sssistant_regular"
            android:text="@string/please_type_the_verification_code_send_to"
            app:layout_constraintEnd_toEndOf="@+id/VCodeText"
            app:layout_constraintStart_toStartOf="@+id/VCodeText"
            app:layout_constraintTop_toBottomOf="@+id/VCodeText" />

        <TextView
            android:id="@+id/Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="+8801771330378"
            android:fontFamily="@font/sssistant_regular"
            android:textColor="@color/carbon_red_400"
            app:layout_constraintEnd_toEndOf="@+id/Details"
            app:layout_constraintStart_toStartOf="@+id/Details"
            app:layout_constraintTop_toBottomOf="@+id/Details" />


        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E14854"
            app:bar_enabled="true"
            app:bar_height="2dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:height="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Number"
            app:length="6"
            app:otp_text_size="24dp"
            app:width="@dimen/_30sdp" />



        <TextView
            android:id="@+id/ResentCodeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:fontFamily="@font/sssistant_regular"
            android:text="@string/i_didn_t_receive_a_code"
            app:layout_constraintEnd_toStartOf="@+id/ResentButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/otp_view"
            app:layout_constraintTop_toBottomOf="@+id/otp_view" />

        <TextView
            android:id="@+id/ResentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_resent"
            android:fontFamily="@font/sssistant_regular"
            android:textColor="@color/carbon_red_400"
            app:layout_constraintBottom_toBottomOf="@+id/ResentCodeText"
            app:layout_constraintEnd_toEndOf="@+id/otp_view"
            app:layout_constraintStart_toEndOf="@+id/ResentCodeText"
            app:layout_constraintTop_toTopOf="@+id/ResentCodeText" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
